# otus-cpp-pro-final

./: CMakeLists.txt  README.md
.devcontainer/: devcontainer.json  install-dev-tools.sh
src/: FeatureVector.h  FeatureVector.hpp  HistogramFeatureVectorComputer.h  HsvHistogramFeatureVectorComputer.hpp  IFeatureDistanceComputer.h  IFeatureStorage.h  IFeatureVectorComputer.h  JsonFeatureStorage.h  JsonFeatureStorage.hpp  ManhattanFeatureDistanceComputer.h  ManhattanFeatureDistanceComputer.hpp  main.cpp
tests/: tests_HsvHistogramFeatureVectorComputer.cpp  tests_JsonFeatureStorage.cpp  tests_ManhattanFeatureDistanceComputer.cpp
